implement checkout page

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/7ff03519dd.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body></body>
 </html>
